--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ httpx = "^0.25.0"
 streamlit = "^1.28.0"
 litellm = "^1.0.0"
 prometheus-client = "^0.19.0"
+typer = "^0.9.0"
+rich = "^13.7.0"
+click = "^8.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
@@ -36,6 +39,9 @@ isort = "^5.12.0"
 flake8 = "^6.1.0"
 mypy = "^1.7.0"
 pre-commit = "^3.5.0"
+
+[tool.poetry.scripts]
+backlog = "llm_cost_tracker.cli:app"
 
 [build-system]
 requires = ["poetry-core"]
