--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,25 @@ click = "^8.1.0"
 pytest = "^7.4.0"
 pytest-asyncio = "^0.21.0"
 pytest-cov = "^4.1.0"
+pytest-mock = "^3.12.0"
+pytest-benchmark = "^4.0.0"
+pytest-xdist = "^3.5.0"
+pytest-timeout = "^2.2.0"
 black = "^23.10.0"
 isort = "^5.12.0"
 flake8 = "^6.1.0"
+flake8-docstrings = "^1.7.0"
+flake8-bugbear = "^23.12.0"
+flake8-comprehensions = "^3.14.0"
+flake8-simplify = "^0.21.0"
 mypy = "^1.7.0"
+types-PyYAML = "^6.0.12"
+types-requests = "^2.31.0"
+bandit = "^1.7.5"
+safety = "^2.3.0"
 pre-commit = "^3.5.0"
+httpx = "^0.25.0"
+psutil = "^5.9.0"
 
 [tool.poetry.scripts]
 backlog = "llm_cost_tracker.cli:app"
